infrastructure/networking/cilium/features/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: kube-system
  annotations:
    io.cilium.lb-service: "true"
spec:
  addresses:
  - type: IPAddress
    value: 192.168.1.141
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
